Added logger Messages
SVN-Revision: 10